--- a/CapaPresentacion/CapaPresentacion.csproj
+++ b/CapaPresentacion/CapaPresentacion.csproj
@@ -55,6 +55,18 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="frmCambiarCurso.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmCambiarCurso.Designer.cs">
+      <DependentUpon>frmCambiarCurso.cs</DependentUpon>
+    </Compile>
+    <Compile Include="frmCambioDeAlumno.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmCambioDeAlumno.Designer.cs">
+      <DependentUpon>frmCambioDeAlumno.cs</DependentUpon>
+    </Compile>
     <Compile Include="frmCursosPorDocente.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -102,6 +114,12 @@
     </Compile>
     <Compile Include="frmModificarDocente.Designer.cs">
       <DependentUpon>frmModificarDocente.cs</DependentUpon>
+    </Compile>
+    <Compile Include="frmModificarNota.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmModificarNota.Designer.cs">
+      <DependentUpon>frmModificarNota.cs</DependentUpon>
     </Compile>
     <Compile Include="frmNotas.cs">
       <SubType>Form</SubType>
@@ -293,6 +311,12 @@
     <Compile Include="Reportes\frmReporteMorosidad.Designer.cs">
       <DependentUpon>frmReporteMorosidad.cs</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="frmCambiarCurso.resx">
+      <DependentUpon>frmCambiarCurso.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmCambioDeAlumno.resx">
+      <DependentUpon>frmCambioDeAlumno.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="frmCursosPorDocente.resx">
       <DependentUpon>frmCursosPorDocente.cs</DependentUpon>
     </EmbeddedResource>
@@ -316,6 +340,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="frmModificarDocente.resx">
       <DependentUpon>frmModificarDocente.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmModificarNota.resx">
+      <DependentUpon>frmModificarNota.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="frmNotas.resx">
       <DependentUpon>frmNotas.cs</DependentUpon>
