cambios: *el registro de calificaciones ya funciona tanto para Alumnos como para profesores. *Los Administradores aun no debido a que tengo que formatear la consulta.

--- a/Clases/Clases.csproj
+++ b/Clases/Clases.csproj
@@ -66,6 +66,7 @@
     <Compile Include="clsAdministrador.cs" />
     <Compile Include="clsCurso.cs" />
     <Compile Include="clsNota.cs" />
+    <Compile Include="clsNotaFormateada.cs" />
     <Compile Include="clsProfesor.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
